# realm_of_python

./: .gitignore  README.md  playground.py  pyproject.toml
11_neural_network/: pyproject.toml
11_neural_network/presentations/: part_0.ipynb  part_1.ipynb  part_2.ipynb
advanced_inheritance/custom_classes/: README.md  abstraction.py  class_inheritance.py  class_property.py  class_property_internal_class.py  init_new.py
advanced_inheritance/metaclasses/: metaclasses_dict.py
astral-uv-workshop/: Dockerfile  README_disclaimer.md
astral-uv-workshop/pyprojects/multiple_files/libs/my_library_sql/: pyproject.toml
astral-uv-workshop/pyprojects/single_file/: pyproject.toml
astral-uv-workshop/workspace_playground/version_a/: pyproject.toml
astral-uv-workshop/workspace_playground/version_a/my_application/: pyproject.toml
astral-uv-workshop/workspace_playground/version_a/my_library_database/: pyproject.toml
astral-uv-workshop/workspace_playground/version_b/my_application/: pyproject.toml
astral-uv-workshop/workspace_playground/version_c/my_application/: pyproject.toml
asynchronous_code/: README.md
asynchronous_code/measure_the_time/: README.md  big_o_queue.py  big_o_queue.py.lprof  big_o_queue_no_profile.py  comprehension_vs_generator.py.lprof  loops_vs_comprehension.py.lprof  measure_memory.py  measure_memory_no_profiler.py  measure_speed.py  measure_speed_of_sum.py  measure_speed_of_sum_line_profiler.py  measure_speed_of_sum_line_profiler.py.lprof  profile.cprof
asynchronous_code/optimise_code/: README.md  comprehension_vs_generator.py  loops_vs_comprehension.py
asynchronous_code/optimise_workflows/: README.md  big_o_search.py  big_o_search.py.lprof  big_o_search_coroutines.py  big_o_search_coroutines_gather.py  big_o_search_processes.py  big_o_search_threads.py  process_order.py  process_order_no_GIL.py  process_sleep.py  request_to_download_coroutines.py  request_to_download_coroutines_2.py  request_to_download_coroutines_3.py  request_to_download_process.py  request_to_download_thread.py
asynchronous_code/tests/: test_measure_speed.py
edge_cases/: descriptors.py
edge_cases/dunder_methods/: prepare.py  slots.py
edge_cases/hall_of_fame/: ellipsis.py
edge_cases/tests_code/tests/: test_something.py  test_with_pytest.py  test_with_pytest_stub.py
functions/: closure.py
hall_of_fame/: dictionary.py  list_mutability.py  playground.py
inheritance/: playground.py  tracebility.py
inheritance/custom_classes/: abstraction_interface.py  diamond_inheritance.py  multiple_inheritance.py  playground.py  super_call.py
inheritance/metaclasses/: metaclasses.py  metaclasses_prepare.py
own_dependency_injection/: di_playground.py  test_di_playground.py
python_101_workshop/: README.md
python_101_workshop/01_playground/: bytecode_playground.py  playground.py  python_syntax_leftovers.ipynb  python_syntax_part1.ipynb  python_syntax_part1_after_session.ipynb  python_syntax_part2.ipynb  python_syntax_part2_after_session.ipynb  python_syntax_part3.ipynb  python_syntax_part3_after_session.ipynb
python_101_workshop/01_playground/interface/: 01_playground_interface.py  03_playground_interface.py
python_101_workshop/01_playground/modules/: playground_modules.py
python_101_workshop/01_playground/parallelism/: README.md  with_asyncio.py  with_processes.py
python_101_workshop/01_playground/parallelism/additional_materials/: big_o_search_coroutines.py  (+1 more)
python_101_workshop/02_playground_uv/: Dockerfile
python_101_workshop/02_playground_uv/example/: main.py
python_101_workshop/02_playground_uv/workspaces/: README.md
python_101_workshop/03_playground_libraries/: README.md
python_101_workshop/03_playground_libraries/docs/: README.md
python_workshop/01_playground/: Dockerfile  README.md  playground.py  playground_gc.py  pyproject.toml  python_syntax_part1.ipynb  python_syntax_part2_class.py  python_syntax_part2_generic.py  python_syntax_part2_memory.py
python_workshop/01_playground/interface/: 02_playground_interface.py  04_playground_interface.py
python_workshop/01_playground/parallelism/: indexes_to_find.txt  with_threads.py
python_workshop/02_playground_uv/: README.md  pyproject.toml
python_workshop/02_playground_uv/example/: loguru-0.1.0-py3-none-any.whl
python_workshop/02_playground_uv/example/my_package/: big_o_search_coroutines.py
python_workshop/02_playground_uv/temp/: pyproject.toml
python_workshop/02_playground_uv/workspaces/: pyproject.toml
python_workshop/03_playground_libraries/: pyproject.toml
python_workshop/03_playground_libraries/src/playground_libraries/fast_numba/: jit_compilation.py
pytorch_neural_network/: playground.ipynb  sandbox_pluralsight.ipynb
pytorch_neural_network/presentations/: README.md  part_3.ipynb
showcase_project/: 01_virtual_enviroment.md
showcase_project/my_project/: pyproject.toml
tests_code/: README.md  my_alarm.py  my_code.py
tests_code/tests/: test_with_pytest_spy.py
typing/: session.ipynb
typing/stub_example/: example_module.py  example_module_temp.pyi
typing_workshop/: README.md  generic_typing.py  session_revisited.ipynb
uv-playground/: README.md  README_prerequisites.md  uv.toml
uv-playground/pyprojects/multiple_files/: README.md  pyproject.toml
uv-playground/pyprojects/multiple_files/libs/my_library_genai/: pyproject.toml
uv-playground/pyprojects/multiple_files/libs/my_library_sql/: pyproject.toml
uv-playground/pyprojects/multiple_files/libs/my_library_sql/src/my_library_sql/: __init__.py
uv-playground/pyprojects/multiple_files/projects/my_application/: main.py
uv-playground/workspace_playground/: README.md
uv-playground/workspace_playground/version_a/my_library_database/: pyproject.toml
uv-playground/workspace_playground/version_a/my_library_database/src/my_library_database/: common.py
uv-playground/workspace_playground/version_a/my_library_genai/: pyproject.toml
uv-playground/workspace_playground/version_c/my_library_genai/: pyproject.toml
uv-playground/workspace_playground/version_c/my_library_genai/src/my_library_genai/: __init__.py
(+14 files in other folders)
