[project]
name = "realm_of_python"
version = "0.1.0"
description = ""
authors = [
    {name = "Petr Lorenc",email = "petr.lorenc.ml@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.poetry.group.test.dependencies]
pytest-benchmark = "^5.1.0"


[tool.poetry.group.profilers.dependencies]
line-profiler = "^4.2.0"
memory-profiler = "^0.61.0"
snakeviz = "^2.2.2"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"

