[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pycowsay>=0.0.0.2",
    "requests>=2.28.1",
    "setuptools>=70.2.0",
]

[project.optional-dependencies]
format = [
    "flake8>=7.2.0",
]
openai = [
    "openai>=1.78.1",
]

[dependency-groups]
dev = [
    "numpy>=2.2.5",
    "pytest>=8.3.5",
]
documentation = [
    "sphinx>=8.2.3",
]


[tool.uv.sources]
XXY = [
    { index = "ZZZ" },
]

[[tool.uv.index]]
name = "ZZZ"
url = "xx"
publish-url = "xxx"

#[build-system]
#requires = ["hatchling >= 1.26"]
#build-backend = "hatchling.build"
#
#[tool.hatch.build.targets.wheel]
#packages = ["main"]