[project]
name = "playground_libraries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Petr Lorenc", email = "petr.lorenc.ml@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
playground_libraries = "playground_libraries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
numba = [
    "numba>=0.61.2",
]
