[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.1",
    "setuptools>=70.2.0",
]

[project.optional-dependencies]
format = [
    "flake8>=7.2.0",
]

[tool.uv.sources]
XYZ = [
    { index = "YYY" },
]

[[tool.uv.index]]
name = "YYY"
url = ""
publish-url = ""


[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
documentation = [
    "sphinx>=8.2.3",
]

#[build-system]
#requires = ["hatchling >= 1.26"]
#build-backend = "hatchling.build"
#
#[tool.hatch.build.targets.wheel]
#packages = ["main"]