[project]
name = "multiple-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Petr Lorenc", email = "lorencp@merck.com" }
]
requires-python = ">=3.12.6"
dependencies = []

# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["projects/my_application", "libs/my_library_genai", "libs/my_library_sql"]

[tool.uv.workspace]
members = ["libs/my_library_genai", "libs/my_library_sql", "projects/my_application"]
