[project]
name = "my-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "my-library-database",
    "my-library-genai",
]

[tool.uv.sources]
my-library-database = { workspace = true }
my-library-genai = { workspace = true }
