[project]
name = "my-library-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Petr Lorenc", email = "petr.lorenc.ml@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.79.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
