[project]
name = "my-library-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Petr Lorenc", email = "petr.lorenc.ml@gmail.com" }
]
requires-python = ">=3.12.6"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
