[project]
name = "my-library-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Petr Lorenc", email = "lorencp@merck.com" }
]
requires-python = ">=3.12.6"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
